Making the project run with vite

--- a/demos/deep_nn/deep_nn.html
+++ b/demos/deep_nn/deep_nn.html
@@ -12,8 +12,8 @@
 
     <input type="file" id="datafile" />
     <button type="button" id="run_model_btn">RUN MODEL</button>
-    <script type="module" src="../../dist/demos/deep_nn/deep_nn.js"></script>
-    <script type="module" src="../../dist/src/js/utils/utils_data.js"></script>
+    <script type="module" src="../../demos/deep_nn/deep_nn.js"></script>
+    <script type="module" src="../../src/js/utils/utils_data.js"></script>
     <!-- <script type="module" src="logistic_regression.js"></script> -->
 </body>
 </html>
