--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>var exports = {};</script>
-    <script type="module" src="../../dist/src/html/demo.js"></script>
+    <script type="module" src="../../src/html/demo.js"></script>
 </head>
 <body></body>
 </html>
