--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NN Visualizer</title>
-    <link rel="stylesheet" href="../../css/vis.css">
-    <link rel="stylesheet" href="../../css/computational_graph.css">
-    <script type="module" src="/dist/src/js/vis/vis.js"></script>
-    <script type="module" src="/dist/src/js/vis/computational_graph.js"></script>
-    <script type="module" src="/dist/src/js/vis/integration.js"></script>
-    <script type="module" src="/dist/src/js/utils/utils_data.js"></script>
+    <link rel="stylesheet" href="/css/vis.css">
+    <link rel="stylesheet" href="/css/computational_graph.css">
+    <script type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsfive@0.3.14/dist/browser/hdf5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>   <!--To decompress gzip-->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="module" src="/src/vis.js"></script>
 
 </head>
 <body>
