adding worker to offload task from main thread

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <button id="save-network">Save Network</button>
         <button id="load-network">Load Saved Network</button>
         <button id="clear-saved-network">Clear Saved Network</button>
-        <button id="download-model-btn" style="background-color: #0d9488;">Download model in JSON</button>
+        <!-- <button id="download-model-btn" style="background-color: #0d9488;">Download model in JSON</button> -->
     </div>
     <div id="persistence-status"></div>
 
