fixing pause resume state management bug

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
     </div>
     
     <div class="training-controls-wrapper">
-        <button id="main-action-btn" class="run-btn">Start Training</button>
+        <button id="start-training-btn" class="start-training-btn">Start Training</button>
+        <button id="pauseresume-btn" class="pauseresume-btn" style="display: none;"></button>
         <button id="stop-btn" class="stop-btn" style="display: none;">Stop</button>
     </div>
     <div id="training-status" style="margin-top: 1rem; text-align: center;">Ready.</div>
